--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -55,6 +55,7 @@ html, body {
 #home {
 	background: url('10560450_784283401645904_5101054386884725992_o.jpg')
 		no-repeat center center fixed;
+	/* background-position: 0px 0px; */
 	display: table;
 	height: 100%;
 	position: relative;
@@ -65,13 +66,13 @@ html, body {
 	background-size: cover;
 }
 
-#gallery {
+/* #gallery {
 	display: table;
 	height: 100%;
 	position: relative;
 	width: 100%;
 }
-
+ */
 #about {
 	
 }
@@ -92,7 +93,7 @@ html, body {
 	vertical-align: middle;
 	width: 70px;
 }
-#blog{
+#gallery{
 background: rgb(0,174,255); /* Old browsers */
 background: -moz-linear-gradient(top,  rgba(0,174,255,1) 0%, rgba(0,198,216,1) 28%, rgba(0,198,216,1) 73%, rgba(153,220,232,1) 96%, rgba(179,235,249,1) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,174,255,1)), color-stop(28%,rgba(0,198,216,1)), color-stop(73%,rgba(0,198,216,1)), color-stop(96%,rgba(153,220,232,1)), color-stop(100%,rgba(179,235,249,1))); /* Chrome,Safari4+ */
@@ -104,6 +105,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00aeff', end
 
 }
 #information {
+	background: url('girl-with-camera.jpg')
+		no-repeat center center fixed;
+	background-position: 0px 0px;
+	display: table;
+	height: 100%;;
+	position: relative;
+	width: 100%;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	 
+}
+#blog {
 	background: url('girl-with-camera.jpg')
 		no-repeat center center fixed;
 	background-position: 0px 0px;
@@ -141,11 +156,11 @@ footer .glyphicon:hover {
 
 
 
-#gallery .item img{
+/* #gallery .item img{
 	display: block;
 	width: 100%;
 	height: auto;
-}
+} */
 
 .foobar{
   color: #ffffff;
@@ -236,57 +251,50 @@ footer .glyphicon:hover {
 	<!-- fourth section - Information -->
 	<div id="information" class="pad-section">
 		<div class="container">
-			<div class="row text-center">
-				
-					<button type="button" class="btn btn-default btn-lg">						
-  						<span class="glyphicon glyphicon-camera" aria-hidden="true" style="font-size:24px;"></span> 
-  						<span class="" style="font-size:24px;">Photography</span>
-  						<p>Let us photograph your next event</p>
-					</button>
-					<span class="glyphicon glyphicon-camera"> Photography</span> 	
-				
 
-			</div>
-			<div class="row text-center">
-				
-					<button type="button" class="btn btn-default btn-lg">						
-  						<span class="glyphicon glyphicon-pencil" aria-hidden="true" style="font-size:24px;"></span> 
-  						<span class="" style="font-size:24px;"> Event Planning</span>
-  						<p>Let us plan your next event</p>
-					</button>
-					 	
-				
-
-			</div>
  
-			<div class="row text-center">
-				<div class="col-sm-4">
-					<div class="well">
-						<span class="glyphicon glyphicon-camera" aria-hidden="true" style="font-size:24px;"></span> 
-  						<span class="" style="font-size:24px;">Photography</span>
+			<div class="row text-centerr">
+				<div class="col-sm-4" style="margin-bottom:20px;margin-top:90px;">
+					<div class="welll clearfix" style="color: white; background-color: rgba(0, 0, 0, 0.80); padding: 10px 10px 10px 10px;">
+						<div class="glyphicon glyphicon-camera pull-left" aria-hidden="true" style="font-size:60px; margin-right:30px; margin-left:18px; line-height:92px;"></div> 
+  						<div class="pull-left">
+  							<h3>Photography</h3>
+  							<p>Let us photograph your next event</p>
+  						</div>
   					</div>
-				</div>
-				
+				</div>				
+			</div>
+			<div class="row text-centerr">
+				<div class="col-sm-4">
+					<div class="welll clearfix" style="color: white; background-color: rgba(0, 0, 0, 0.80); padding: 10px 10px 10px 10px;">
+						<div class="glyphicon glyphicon-pencil pull-left" aria-hidden="true" style="font-size:60px; margin-right:30px; margin-left:18px; line-height:92px;"></div> 
+  						<div class="pull-left">
+  							<h3>Event Planning</h3>
+  							<p>Let us plan your next event</p>
+  						</div>
+  					</div>
+				</div>				
 			</div>
 		</div>
 	
 	
 	
-<!-- 		<div class="fotorama">
-				<img src="10560450_784283401645904_5101054386884725992_o.jpg" />
-				<img src="1980352_713569092050669_3900100014838096590_o.jpg" />
-		</div>  -->
 	</div>
 	<!-- /fourth section -->
 	
-	<div id="blog" class="pad-section">
+	<div id="gallery" class="pad-section">
 		<div class="container">
-			
-			<div class="fotorama"  data-nav="thumbs">
+			<div class="fotorama"  data-nav="thumbs" style="margin-top:30px; margin-bottom:30px;">
 				<img src="10560450_784283401645904_5101054386884725992_o.jpg" />
 				<img src="1980352_713569092050669_3900100014838096590_o.jpg" />
 			</div>
- 			<!-- <div class="row" th:each="data,count : ${feed.data}" th:unless="${count.index} > 3"> 								
+		</div>
+	</div>
+	
+	
+	<div id="blog" class="pad-section">
+		<div class="container">
+			<div class="row" th:each="data,count : ${feed.data}" th:unless="${count.index} > 3"> 								
 				<div class="col-sm-12">
 					
 				<div th:if="${data.story} != null" class="well clearfix">
@@ -312,12 +320,11 @@ footer .glyphicon:hover {
 					
 					
 				</div>
-			</div>  -->
-		
-		
-			
+			</div>
 		</div>
 	</div>
+	
+	
 	<!-- fifth section -->
 	<div id="services" class="pad-section">
 		<div class="container">
@@ -381,13 +388,13 @@ footer .glyphicon:hover {
 	<script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 		<script>
-		$(function() {
+		/* $(function() {
 		  $("#gallery").owlCarousel({
 			  slideSpeed: 300,
 			  paginationSpeed: 400,
 			  singleItem: true
 		  });
-		});
+		}); */
 	</script>
 	<script type="text/javascript" src="js/skrollr.min.js"></script>
     <script type="text/javascript">
